force-app/main/default/objects/ServiceTerritoryMember/fields/Home_Base_Technician__c.field-meta.xml
<CustomField>
    <fullName>Home_Base_Technician__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Home Base Technician</label>
    <type>Checkbox</type>
</CustomField>