force-app/main/default/objects/ServiceTerritoryMember/fields/Starting_Location__c.field-meta.xml
<CustomField>
    <fullName>Starting_Location__c</fullName>
    <label>Starting Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>