force-app/main/default/objects/ServiceTerritoryMember/fields/WareHouse_Technician__c.field-meta.xml
<CustomField>
    <fullName>WareHouse_Technician__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WareHouse Technician</label>
    <type>Checkbox</type>
</CustomField>