force-app/main/default/objects/ServiceTerritoryMember/validationRules/FSL__Secondary_STM.validationRule-meta.xml
<ValidationRule>
    <fullName>FSL__Secondary_STM</fullName>
    <active>false</active>
    <errorConditionFormula>(ISPICKVAL(TerritoryType, &quot;Secondary&quot;) &amp;&amp; 
    ( ( ( ISCHANGED(Longitude) || ISCHANGED(Latitude) ) &amp;&amp; ( (NOT(ISBLANK(Longitude))) || (NOT(ISBLANK(Latitude))) )) || 
      (NOT(ISBLANK(FSL__Internal_SLR_HomeAddress_Geolocation__Latitude__s))) || 
      (NOT(ISBLANK(FSL__Internal_SLR_HomeAddress_Geolocation__Longitude__s))) || 
      (NOT(ISBLANK( Street ))) || 
      (NOT(ISBLANK( City ))) ||
      (NOT(ISBLANK( Country ))) ||
      (NOT(ISBLANK( State ))) || 
      (NOT(ISBLANK(  PostalCode  )))
    )
 )</errorConditionFormula>
    <errorMessage>Cannot save Service Territory Member of type secondary with Operating Hours or Address</errorMessage>
</ValidationRule>